--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,8 @@
   color: black;
 }
 
-.instagram {
-  color: #d12ee0;
+.linkedin {
+  color: #0077b5;
 }
 
 .angellist {
@@ -493,6 +493,43 @@ a.hoverline:hover {
   text-align: center;
   vertical-align: middle;
   display: table-cell;
+}
+
+.card.large .card-content p {
+  color: inherit;
+  margin: 0;
+  padding: 30px 0;
+}
+
+#experience .card-content .row {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+}
+
+.card.large .card-image {
+  height: 230px;
+}
+
+.card.large .card-content {
+  height: auto;
+}
+
+.card.medium .card-image {
+  height: 240px;
+}
+
+.card-action a.btn-floating {
+  margin-bottom: 0;
+}
+
+#contact a:not(.btn-floating) {
+  bottom: 6px;
+  left: 20px;
+  position: relative;
+}
+
+#experience .col.s12.m2 {
+  text-align: center;
 }
 
 .fa-external-link:before {
